src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_has_opportunity__c</fullName>
        <label>Account has opportunity</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ActivityCompletedDate__c</fullName>
        <description>Whenever a specific set of Activities are getting completed,this field will be updated with current date.</description>
        <label>ActivityCompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Completed_in_Last_14_Days__c</fullName>
        <description>Display graphic to show if activity was performed within last 14 days on the account.</description>
        <formula>IF(( ActivityCompletedDate__c &gt; TODAY()-15  &amp;&amp; ActivityCompletedDate__c &lt; TODAY()+31), IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Active&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows if activity was performed within last 14 days on the account.</inlineHelpText>
        <label>Activity Exists</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Email_Address_1__c</fullName>
        <label>Additional Email Address (1)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email_Address_2__c</fullName>
        <label>Additional Email Address (2)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Name_1__c</fullName>
        <description>Additional Name for Work Site</description>
        <label>Additional Name 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Name_2__c</fullName>
        <description>Additional Name for Work Site</description>
        <label>Additional Name 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Name_3__c</fullName>
        <label>Additional Name 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AddressDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <label>Association</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUD_Customer_Number__c</fullName>
        <description>BUD Customer Number for LO DK</description>
        <label>BUD Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Butiksl_sning__c</fullName>
        <label>Butikslösning</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Mobile__c</fullName>
        <description>Normalised person account mobile phone number (PersonMobilePhone).</description>
        <inlineHelpText>Normalised person account mobile phone number (PersonMobilePhone).</inlineHelpText>
        <label>CC Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CC_Phone__c</fullName>
        <description>Normalised account phone number (Phone).</description>
        <inlineHelpText>Normalised account phone number (Phone).</inlineHelpText>
        <label>CC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chain_Profile__c</fullName>
        <label>Chain Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <label>Chain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_Id__c</fullName>
        <label>Child Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coestablishment__c</fullName>
        <label>Coestablishment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Type__c</fullName>
        <label>Concept/Type</label>
        <picklist>
            <picklistValues>
                <fullName>Postombud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frimärksombud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postbutikk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forhandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grossist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Preferences__c</fullName>
        <inlineHelpText>Marketing attribute</inlineHelpText>
        <label>Contact Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Generally by email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Converted_From_Webshop_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag that indicated that the record has been converted from a Webshop dummy record type.</description>
        <label>Converted From Webshop Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicator for PostNord Top 50 Corporate Clients</inlineHelpText>
        <label>Corporate Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Form__c</fullName>
        <label>Corporate Form</label>
        <picklist>
            <picklistValues>
                <fullName>DK:JF010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF070</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF080</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF090</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF260</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF280</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF290</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:JF440</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Registration_Number__c</fullName>
        <label>Corporate Registration Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>IF( Is_Active_Order_Registrar_Number__c = TRUE,
IF( ISPICKVAL(Internal_Lifecycle_Status__c , &quot;Passive&quot;),
Involved_Party_ID__c&amp;&quot; &quot;&amp;IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Passive&quot;),
Involved_Party_ID__c&amp;&quot; &quot;&amp;IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Active&quot;)), Involved_Party_ID__c&amp;&quot; &quot;&amp;IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Active&quot;) )</formula>
        <inlineHelpText>Involved Party ID + green = active, orange = passive, red = inactive</inlineHelpText>
        <label>Involved Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Responsible_ID__c</fullName>
        <label>Customer Responsible ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Segment__c</fullName>
        <formula>CASE( $User.Sales_Area1__c, 
&quot;1000&quot;, PDK_BE_Customer_Service_Segment__c , 
&quot;FO91&quot;, ME_SE_Customer_Service_Segment__c , 
&quot;3670&quot;, LO_FI_Customer_Service_Segment__c , 
&quot;LO NO&quot;, LO_NO_Customer_Service_Segment__c , 
&quot;0540&quot;, LO_DK_Customer_Service_Segment__c , 
&quot;FO92&quot;, LO_SE_Customer_Service_Segment__c , 
&quot;0630&quot;, LO_FI_DPD_Customer_Service_Segment__c , 
&quot;4000&quot;, PDK_LO_Customer_Service_Segment__c , 
&quot;You don&apos;t have a Sales Area&quot;)</formula>
        <inlineHelpText>Your Sales Area Customer Service Segment</inlineHelpText>
        <label>Customer Service Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_SAP_ERP__c</fullName>
        <label>DK SAP ERP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPD_Customer_Number__c</fullName>
        <label>DPD Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>DataSource</label>
        <picklist>
            <picklistValues>
                <fullName>Customer services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EKM/FOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webshop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Update_Address_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will prevent PAR updates to the Account Name and Postal Address of this account.</inlineHelpText>
        <label>Do Not Update Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateKey__c</fullName>
        <formula>Short_Name__c  + TEXT(Postal_Address_Country__c) + Postal_Address_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DuplicateKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the account triggers to filter out already checked accounts.</description>
        <inlineHelpText>If you uncheck this field, the system will check once more for possible duplicate accounts.</inlineHelpText>
        <label>Duplicate checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAN_Control_Digit__c</fullName>
        <label>EAN Control Digit</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EAN_Location_Number_1__c</fullName>
        <label>EAN Location Number 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN_Location_Number_2__c</fullName>
        <label>EAN Location Number 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ella_Production_Customer_Number__c</fullName>
        <label>Ella Production Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Extension_Type__c</fullName>
        <label>Extension Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Order Number</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Advertising_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Advertising Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Legal_Entity_Status__c</fullName>
        <label>External Legal Entity Status</label>
        <picklist>
            <picklistValues>
                <fullName>DK:ST00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:STRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRAUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRKRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRKSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRMA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRMIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRPTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRREV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Partner_Type__c</fullName>
        <label>External Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Media Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Post Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Provider_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for PNCM Par validation duplicate.</description>
        <label>External Provider Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Provider_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for PNCM Par validation.</description>
        <label>External Provider Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Provider_Party_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Provider Party ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Provider_Party_Parent_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Provider Party Parent ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Provider_Relationship_ID__c</fullName>
        <label>External Provider Relationship ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Provider_Validation_Error__c</fullName>
        <description>This field is used to show the PNCM Par validation error.</description>
        <label>External Provider Validation Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Work_Site_Status__c</fullName>
        <label>External Work Site Status</label>
        <picklist>
            <picklistValues>
                <fullName>DK:ST00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:STRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRAUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRKRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRKSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRMA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRMIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRPTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRREV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_or_Internal__c</fullName>
        <label>External or Internal</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostNord Internal PN DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostNord Internal PN SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InternalDK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InternalSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flagged_For_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flagged For Review</description>
        <label>Flagged For Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Founding_Date__c</fullName>
        <label>Founding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Inbox_Email__c</fullName>
        <description>Email address that will be used for the &quot;PostNord Org Structure&quot; accounts.</description>
        <label>Functional Inbox Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GTT_Customer_Number__c</fullName>
        <label>GTT Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Parent_Corporate_Registration_Nr__c</fullName>
        <description>The registration number for the group.</description>
        <label>Group Parent Corporate Registration Nr</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Parent_Legal_Name__c</fullName>
        <description>The name for a group.</description>
        <label>Group Parent Legal Name</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Parent_Registration_Country__c</fullName>
        <description>The country registered for the group.</description>
        <label>Group Parent Registration Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIT_Customer_Number__c</fullName>
        <description>HIT Customer Number for LO DK</description>
        <label>HIT Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Danish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Info Danish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_English__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subscribes to Info English</inlineHelpText>
        <label>Info English</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_German__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subscribes to Info German</inlineHelpText>
        <label>Info German</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Lifecycle_Status__c</fullName>
        <label>Internal Lifecycle Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Reference__c</fullName>
        <label>Invoice Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Involved_Party_ID__c</fullName>
        <description>Involved Party Identifying number, used to communicate with customers</description>
        <externalId>true</externalId>
        <label>Involved Party ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active_Order_Registrar_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag to indicate if the PostNord Customer ID is an active Order Registrar Number</inlineHelpText>
        <label>Is Active Order Registrar Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MOD_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MOD Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LO_DK_Cust_Resp_Email__c</fullName>
        <label>LO DK Cust Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LO_DK_Cust_Resp_Name__c</fullName>
        <label>LO DK Cust Resp Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_DK_Cust_Resp_Phone__c</fullName>
        <label>LO DK Cust Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LO_DK_Cust_Resp_Team__c</fullName>
        <label>LO DK Cust Resp Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_DK_Cust_Resp_Title__c</fullName>
        <label>LO DK Cust Resp Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_DK_Customer_Service_Segment__c</fullName>
        <label>LO DK Customer Service Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_DK_Sales_Mode__c</fullName>
        <label>LO DK Sales Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_DK_Sub_Segment__c</fullName>
        <label>LO DK Sub Segment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_DK_Top_Segment__c</fullName>
        <label>LO DK Top Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_DK_custom_call_interval__c</fullName>
        <label>LO DK custom call interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LO_FI_Cust_Resp_Email__c</fullName>
        <label>LO FI Cust Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LO_FI_Cust_Resp_Name__c</fullName>
        <label>LO FI Cust Resp Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_Cust_Resp_Phone__c</fullName>
        <label>LO FI Cust Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LO_FI_Cust_Resp_Team__c</fullName>
        <label>LO FI Cust Resp Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_Cust_Resp_Title__c</fullName>
        <label>LO FI Cust Resp Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_Customer_Service_Segment__c</fullName>
        <label>LO FI Customer Service Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Cust_Resp_Email__c</fullName>
        <label>LO FI DPD Cust Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Cust_Resp_Name__c</fullName>
        <label>LO FI DPD Cust Resp Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Cust_Resp_Phone__c</fullName>
        <label>LO FI DPD Cust Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Cust_Resp_Team__c</fullName>
        <label>LO FI DPD Cust Resp Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Cust_Resp_Title__c</fullName>
        <label>LO FI DPD Cust Resp Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Customer_Service_Segment__c</fullName>
        <label>LO FI DPD Customer Service Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Sales_Mode__c</fullName>
        <label>LO FI DPD Sales Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Sub_Segment__c</fullName>
        <label>LO FI DPD Sub Segment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_Top_Segment__c</fullName>
        <label>LO FI DPD Top Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_DPD_custom_call_interval__c</fullName>
        <label>LO FI DPD custom call interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LO_FI_Sales_Mode__c</fullName>
        <label>LO FI Sales Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_Sub_Segment__c</fullName>
        <label>LO FI Sub Segment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_Top_Segment__c</fullName>
        <label>LO FI Top Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_FI_custom_call_interval__c</fullName>
        <label>LO FI custom call interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LO_NO_Cust_Resp_Email__c</fullName>
        <label>LO NO Cust Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LO_NO_Cust_Resp_Name__c</fullName>
        <label>LO NO Cust Resp Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>